# TrajectortyTrackingPackages

./: .gitignore
trajectory_tracking/: CMakeLists.txt  package.xml
trajectory_tracking/include/: controller.hpp  trajectory_handler.hpp
trajectory_tracking/src/: controller.cpp
trajectory_tracking/trajectory_tracking/: controller_interface.py
trajectory_tracking_msgs/: CMakeLists.txt  package.xml
trajectory_tracking_msgs/action/: TrajectoryTrack.action
trajectory_tracking_msgs/msg/: Trajectory.msg
trajectory_tracking_msgs/srv/: SetControllerParameters.srv
trajectory_tracking_test/: CMakeLists.txt  package.xml
trajectory_tracking_test/scripts/: controller_test.py  data_saver.py  plot_data.py
